Implementação parcial de testes de Hipótese, Intervalos de confinaça e de P-Valor

--- a/Work.ipynb
+++ b/Work.ipynb
@@ -23,30 +23,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Estatistica import Stat"
+    "from Estatistica import Stat\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "IC =  2100.0  ±  849.317\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(1250.682, 2949.317)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "S = Stat()\n",
-    "S.setData2(Xa = 42500, Xb = 40400, Va = 2200, Vb = 1900, Na = 45, Nb = 45)\n",
+    "S.setData2(Xa = 42500, Xb = 40400, Va = 2200**2, Vb = 1900**2, Na = 45, Nb = 45)\n",
     "S.setConf(alfa = 5/100)\n",
     "S.IC()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Fcalc =  2.949\nFcritmin =  0.248\nFcritmax =  5.005\nAceito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "S2 = Stat()\n",
     "S2.setData2(Na = 15, Nb = 10, Va = 18.7, Vb = 6.34)\n",
@@ -56,24 +95,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Quicalc =  6.494\nQuicritmin =  10.117\nRejeito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
     "A = [14,20,16,21,19,17,20,18,20,19,16,17,21,22,21,17,20,21,16,22]\n",
     "S3 = Stat(A)\n",
-    "S3.TH(mode=\"menorVar\", sigma2 = 15)\n"
+    "S3.TH(mode=\"menorVar\", cond = 15)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Quicalc =  9.92\nQuicritmin =  10.85\nRejeito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
    "source": [
     "S4 = Stat()\n",
     "S4.setData2(Na=21, Va=12.4)\n",
-    "S4.TH(mode=\"menorVar\", sigma2 = 25)"
+    "S4.TH(mode=\"menorVar\", cond = 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alfa =  72.063 %\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.07206351740800765"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "S5 = Stat()\n",
+    "S5.setData2(Na = 120, Pla = 17/30)\n",
+    "S5.pValor(mode = \"maiorProp\", cond = 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "IC =  -0.14  ±  0.208\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(-0.348, 0.067)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "S5 = Stat()\n",
+    "S5.setData2(Pla =22, Plb = 29, Na = 40, Nb = 42)\n",
+    "S5.IC(mode='diffProp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "T_calc_emparelhado =  3.464\nTcrit =  1.795\nRejeito H0, a média A é maior que a média B\nLembre que deve ser respeitada a ordem de que o dado A é menor que o B. A troca de sinal irá distorcer o resultado\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "A = [12,10,15,11,11,14,11,12,14,15,16,17]\n",
+    "B = [14,11,15,18,14,16,11,12,15,17,18,21]\n",
+    "\n",
+    "S6 = Stat(B,A)\n",
+    "S6.TH(mode = \"maiorMedEmp\", student=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Zcalc =  -1.639\nZcritmin =  -1.959\nZcritmax =  1.959\nAceito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "S7 = Stat()\n",
+    "S7.setData2(Va = 2.25, Na = 20, Xa = 31.95)\n",
+    "S7.TH(\"med\", cond=32.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alfa =  21.459 %\nBeta =  2.103 %\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.021031678242562194"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "S8 = Stat()\n",
+    "S8.setData2(Xa = 27.6, Va = 1.6**2, Xb = 29.8, Vb = 2.8**2, Na =10, Nb = 10)\n",
+    "S8.pValor(\"alfaMedia\", cond = 28)\n",
+    "S8.pValor(\"betaMedia\", cond = 28)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "T_calc_emparelhado =  -5.303\nTcritmin =  -2.109\nTcritmax =  2.109\nRejeito H0, as médias são diferentes\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "A = [29,28,27,30,28,31,30,31,31,30]\n",
+    "B = [32,34,35,39,35,34,34,31]\n",
+    "\n",
+    "S9 = Stat(A, B)\n",
+    "S9.TH(mode = \"diffMedEmp\", student = True, mesmaVariancia = True)"
    ]
   }
  ]
