Inicio de analise de variancia

--- a/Work.ipynb
+++ b/Work.ipynb
@@ -23,9 +23,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from Estatistica import Stat\n",
     "\n",
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +61,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 96
     }
    ],
    "source": [
@@ -65,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +91,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 97
     }
    ],
    "source": [
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +121,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 98
     }
    ],
    "source": [
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +150,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 99
     }
    ],
    "source": [
@@ -153,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +179,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 100
     }
    ],
    "source": [
@@ -182,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +208,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 101
     }
    ],
    "source": [
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +237,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 102
     }
    ],
    "source": [
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +268,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 103
     }
    ],
    "source": [
@@ -271,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Alfa =  21.459 %\nBeta =  2.103 %\n"
+      "Alfa = 21.460 %\nBeta = 2.103 %\n"
      ]
     },
     {
@@ -289,7 +297,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 104
     }
    ],
    "source": [
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +327,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 105
     }
    ],
    "source": [
@@ -329,6 +337,130 @@
     "S9 = Stat(A, B)\n",
     "S9.TH(mode = \"diffMedEmp\", student = True, mesmaVariancia = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Chi2calc =  6.677\nChi2crit =  14.067\nAceito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 106
+    }
+   ],
+   "source": [
+    "A = [0,1,2,3,4,5,6,7,8,9]\n",
+    "B = [6,24,42,59,62,44,41,14,6,2]\n",
+    "S10 = Stat()\n",
+    "S10.TA(A, B, mode=\"poisson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Chi2calc =  15.795\nChi2crit =  7.814\nRejeito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 107
+    }
+   ],
+   "source": [
+    "A = [0,1,2,3,4,5,6,7,8]\n",
+    "B = [25,30,15,12,8,4,3,2,1]\n",
+    "\n",
+    "S11 = Stat()\n",
+    "S11.TA(A, B, mode=\"poisson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "| Fonte       SQ        gl        QM      F     Fcrit |\n| Dado 1    81.20       3       27.067  22.361  3.009 |\n| Dado 2    66.50       8       8.312   6.867   2.355 |\n| Residual  29.05       24      1.210 |\n| Total     176.75      35      5.050 |\n\nRejeito H0.1, as médias de 1 são diferentes\nRejeito H0.2, as médias de 2 são diferentes\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(False, False)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 108
+    }
+   ],
+   "source": [
+    "S12 = Stat()\n",
+    "S12.AV(mode = 'doisFat', SQ2 = 66.5, SQR = 29.05, SQT = 176.75, n1 = 4, n2 = 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "| Fonte        SQ        gl          QM        F    Fcrit    pVal  |\n| Dado 1    44141.07     3       14713.690   0.884  3.239  0.52960 |\n| Residual  266359.69    16      16647.481 |\n| Total     310500.76    19      16342.145 |\n\nAceito H0, as médias são iguais\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 109
+    }
+   ],
+   "source": [
+    "S13 = Stat()\n",
+    "S13.AV(QM1 = 14713.69, SQT = 310500.76, n1 = 4, n2 = 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
