Regressão e teste de correlação (modelo de prova)

--- a/Work.ipynb
+++ b/Work.ipynb
@@ -23,17 +23,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Estatistica import Stat\n",
     "\n",
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +53,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 96
+     "execution_count": 2
     }
    ],
    "source": [
@@ -73,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +83,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 97
+     "execution_count": 3
     }
    ],
    "source": [
@@ -103,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +113,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 98
+     "execution_count": 4
     }
    ],
    "source": [
@@ -132,14 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Quicalc =  9.92\nQuicritmin =  10.85\nRejeito H0\n"
+      "Quicalc =  9.92\n",
+      "Quicritmin =  10.85\n",
+      "Rejeito H0\n"
      ]
     },
     {
@@ -150,7 +144,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 99
+     "execution_count": 5
     }
    ],
    "source": [
@@ -161,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +173,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 100
+     "execution_count": 6
     }
    ],
    "source": [
@@ -190,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +202,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 101
+     "execution_count": 7
     }
    ],
    "source": [
@@ -219,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +231,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 102
+     "execution_count": 8
     }
    ],
    "source": [
@@ -250,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +262,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 103
+     "execution_count": 9
     }
    ],
    "source": [
@@ -279,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +291,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 104
+     "execution_count": 10
     }
    ],
    "source": [
@@ -309,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +321,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 105
+     "execution_count": 11
     }
    ],
    "source": [
@@ -340,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +352,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 106
+     "execution_count": 12
     }
    ],
    "source": [
@@ -370,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +382,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 107
+     "execution_count": 13
     }
    ],
    "source": [
@@ -401,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +413,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 108
+     "execution_count": 14
     }
    ],
    "source": [
@@ -429,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "| Fonte        SQ        gl          QM        F    Fcrit    pVal  |\n| Dado 1    44141.07     3       14713.690   0.884  3.239  0.52960 |\n| Residual  266359.69    16      16647.481 |\n| Total     310500.76    19      16342.145 |\n\nAceito H0, as médias são iguais\n"
+      "| Fonte        SQ        gl          QM    |\n| Dado 1     44141.07     3       14713.690 |\n| Residual   266359.69    16      16647.481 |\n| Total      310500.76    19      16342.145 |\n\nFcalc = 0.884\nFcrit = 3.239\nP-Valor = 0.530\n\nAceito H0, as médias são iguais\n"
      ]
     },
     {
@@ -447,7 +441,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 109
+     "execution_count": 24
     }
    ],
    "source": [
@@ -457,10 +451,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "r = 0.976\nR² = 0.952\nRejeito H0, há correlação linear\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "A = [5,60,95,108,135,210,214,315,720]\n",
+    "B = [2.3,4.5,4.0,3.7,8.2,5.4,7.2,13.8,32.1]\n",
+    "\n",
+    "S14 = Stat(A, B)\n",
+    "S14.TC()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "| Fonte        SQ        gl          QM    |\n| Dado 1     14.32     3       4.773 |\n| Residual   590.58    120      4.921 |\n| Total      604.90    123      4.918 |\n\nFcalc = 0.970\nFcrit = 2.680\nP-Valor = 0.591\n\nAceito H0, as médias são iguais\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "S15 = Stat()\n",
+    "S15.AV(mode = \"multiMedia\", SQ1 = 14.32, SQT = 604.9, n1 = 4, n2 = 31)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Y = 12.000x + 10.000\nIC: 94.000 ± 19.961\nIC: [74.039, 113.961]\n"
+     ]
+    }
+   ],
+   "source": [
+    "S16 = Stat()\n",
+    "S16.regressao(7, 102, 510, 4150, 7140, 740200, 54900, mode = \"previsao\", Var = 10.0613)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Y = 12.000x + 10.000\nIC: 10.000 ± 200.031\nIC: [-190.031, 210.031]\nr = 0.980\nR² = 0.960\n"
+     ]
+    }
+   ],
+   "source": [
+    "S17 = Stat()\n",
+    "S17.regressao(0, 122, 610, 5050, 8540, 897800, 66700)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Y = 1.518x + 3.102\nIC: 3.102 ± 65.127\nIC: [-62.025, 68.229]\nr = 0.895\nR² = 0.801\nTeste de Hipótese para a regressão\nTcalc = 4.917\nTcrit = 2.447\nAceito H0, há regressão\n"
+     ]
+    }
+   ],
+   "source": [
+    "S18 = Stat()\n",
+    "S18.regressao(0, 8, 128, 2221.06, 219.1, 6498.27, 3768.28)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "S19 = Stat()\n"
+   ]
   }
  ]
 }
