Multi medias entre amostras

--- a/Work.ipynb
+++ b/Work.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -131,9 +132,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Quicalc =  9.92\n",
-      "Quicritmin =  10.85\n",
-      "Rejeito H0\n"
+      "Quicalc =  9.92\nQuicritmin =  10.85\nRejeito H0\n"
      ]
     },
     {
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +381,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 26
     }
    ],
    "source": [
@@ -423,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +440,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 15
     }
    ],
    "source": [
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +499,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 17
     }
    ],
    "source": [
@@ -510,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Y = 12.000x + 10.000\nIC: 94.000 ± 19.961\nIC: [74.039, 113.961]\n"
+      "Y = 12.000x + 10.000\nIC: 94.000 ± 19.961\nIC: [74.039, 113.961]\nr = 0.979\nR² = 0.958\nTeste de Hipótese para a regressão\nTcalc = 48.000\nTcrit = 1.984\nAceito H0, há regressão\n"
      ]
     }
    ],
@@ -528,14 +527,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Y = 12.000x + 10.000\nIC: 10.000 ± 200.031\nIC: [-190.031, 210.031]\nr = 0.980\nR² = 0.960\n"
+      "Y = 12.000x + 10.000\nIC: 10.000 ± 200.031\nIC: [-190.031, 210.031]\nr = 0.980\nR² = 0.960\nTeste de Hipótese para a regressão\nTcalc = 53.666\nTcrit = 1.980\nAceito H0, há regressão\n"
      ]
     }
    ],
@@ -546,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -564,11 +563,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Zcalc = -5.303\nZcritmin =  -2.109\nZcritmax =  2.109\nRejeito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
    "source": [
-    "S19 = Stat()\n"
+    "A  = [29, 28, 27, 30, 28, 31, 30, 31, 31, 30]\n",
+    "B = [32, 34, 35, 39, 35, 34, 34, 31]\n",
+    "S19 = Stat(A,B)\n",
+    "S19.TH(\"diffMed\", student = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Zcalc = 1.080\nZcrit = 2.576\nP-Valor = 0.14003\nAceito H0, as proporções são iguais\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "S20 = Stat()\n",
+    "S20.setData2(Pla = 147, Na = (147 + 101), Plb = 64, Nb = (64 + 56))\n",
+    "S20.setConf(0.01)\n",
+    "S20.TH(mode = \"diffProp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alfa = 83.506 %\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.8350615995394375"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "S21 = Stat()\n",
+    "S21.setData2(Xa = 505, Na = 20, Va = 500)\n",
+    "S21.pValor(\"alfaMedia\", cond = 500, student = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Alfa = 2.582 %\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.974177012455162"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "S22 = Stat()\n",
+    "S22.setData2(Pla = 0.53, Na = 1052)\n",
+    "1-S22.pValor(\"maiorProp\", cond = 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Quicalc =  17.917\nQuicritmax =  21.665\nP-Valor = 0.036\nAceito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "S23 = Stat(A = [55,50,50,51,46,60,46,44,44,53])\r\n",
+    "S23.setConf(0.01)\r\n",
+    "S23.TH(mode = \"maiorVar\", cond = 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Zcalc =  -2.247\nZcritmin =  -2.575\nZcritmax =  2.575\nAceito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "S24 = Stat()\n",
+    "S24.setData2(Na = 500, Xa = 99, Va = 99)\n",
+    "S24.setConf(0.01)\n",
+    "S24.TH(mode = \"med\", cond = 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Graus de Liberdade = 1.000\nChi2calc = 3.267\nChi2crit = 3.841\nAceito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 58
+    }
+   ],
+   "source": [
+    "S25 = Stat()\n",
+    "S25.TA(A = [0,1,2,3], B = [18,13,13,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "T_calc_emparelhado =  0.902\nTcrit =  1.894\nAceito H0, as médias são iguais\nLembre que deve ser respeitada a ordem de que o dado A é menor que o B. A troca de sinal irá distorcer o resultado\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "source": [
+    "A=[144,181,200,169,171,186,194,176]\n",
+    "D=[175,164,172,176,198,154,134,169]\n",
+    "\n",
+    "S26 = Stat(A, D)\n",
+    "S26.TH(mode = \"maiorMedEmp\", student=True)"
    ]
   }
  ]
