Dois Fatores com repeticao

--- a/Work.ipynb
+++ b/Work.ipynb
@@ -796,6 +796,72 @@
     "S26 = Stat(A, D)\n",
     "S26.TH(mode = \"maiorMedEmp\", student=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Graus de Liberdade = 7.000\nChi2calc = 6.677\nChi2crit = 14.067\nAceito H0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "A = [0,1,2,3,4,5,6,7,8,9]\n",
+    "B = [6,24,42,59,62,44,41,14,6,2]\n",
+    "S27 = Stat(A,B)\n",
+    "S27.TA()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "| Fonte       SQ          gl        QM          F        Fcrit      p-Valor|\n| Dado 1      2253.44       1       2253.440  376.253  9.330     0.0000 |\n| Dado 2      230.81        2       115.405   19.269   6.927     0.0002 |\n| Interação   18.58         2       9.290     1.551    6.927     0.2517 |\n| Residual    71.87         12      5.989 |\n| Total       2574.70       17      151.453 |\n\nRejeito H0.1, as médias de 1 são diferentes\nRejeito H0.2, as médias de 2 são diferentes\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(False, False)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "S28 = Stat()\n",
+    "S28.setConf(1/100)\n",
+    "S28.AV(mode = 'doisFatRep', SQ1 = 2253.44, SQ2 = 230.81, SQI = 18.58, SQT= 2574.70, n1 = 2, n2 = 3, repeticao = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
