--- a/Work.ipynb
+++ b/Work.ipynb
@@ -161,7 +161,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Alfa =  72.063 %\n"
+      "Alfa = 7.206 %\n"
      ]
     },
     {
@@ -219,7 +219,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "T_calc_emparelhado =  3.464\nTcrit =  1.795\nRejeito H0, a média A é maior que a média B\nLembre que deve ser respeitada a ordem de que o dado A é menor que o B. A troca de sinal irá distorcer o resultado\n"
+      "T_calc_emparelhado =  3.464\n",
+      "Tcrit =  1.795\n",
+      "Rejeito H0, a média A é maior que a média B\n",
+      "Lembre que deve ser respeitada a ordem de que o dado A é menor que o B. A troca de sinal irá distorcer o resultado\n"
      ]
     },
     {
@@ -250,7 +253,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Zcalc =  -1.639\nZcritmin =  -1.959\nZcritmax =  1.959\nAceito H0\n"
+      "Zcalc =  -1.639\n",
+      "Zcritmin =  -1.959\n",
+      "Zcritmax =  1.959\n",
+      "Aceito H0\n"
      ]
     },
     {
@@ -340,7 +346,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Chi2calc =  6.677\nChi2crit =  14.067\nAceito H0\n"
+      "Graus de Liberdade = 7.000\nChi2calc = 6.677\nChi2crit = 14.067\nAceito H0\n"
      ]
     },
     {
@@ -363,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Chi2calc =  15.795\nChi2crit =  7.814\nRejeito H0\n"
+      "Graus de Liberdade = 3.000\nChi2calc = 15.795\nChi2crit = 7.815\nRejeito H0\n"
      ]
     },
     {
@@ -381,7 +387,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 13
     }
    ],
    "source": [
@@ -429,7 +435,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "| Fonte        SQ        gl          QM    |\n| Dado 1     44141.07     3       14713.690 |\n| Residual   266359.69    16      16647.481 |\n| Total      310500.76    19      16342.145 |\n\nFcalc = 0.884\nFcrit = 3.239\nP-Valor = 0.530\n\nAceito H0, as médias são iguais\n"
+      "| Fonte        SQ        gl          QM    |\n| Entre     44141.07     3       14713.690 |\n| Residual   266359.69    16      16647.481 |\n| Total      310500.76    19      16342.145 |\n\nFcalc = 0.884\nFcrit = 3.239\nP-Valor = 0.530\n\nAceito H0, as médias são iguais\n"
      ]
     },
     {
@@ -488,7 +494,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "| Fonte        SQ        gl          QM    |\n| Dado 1     14.32     3       4.773 |\n| Residual   590.58    120      4.921 |\n| Total      604.90    123      4.918 |\n\nFcalc = 0.970\nFcrit = 2.680\nP-Valor = 0.591\n\nAceito H0, as médias são iguais\n"
+      "| Fonte        SQ        gl          QM    |\n| Entre     14.32     3       4.773 |\n| Residual   590.58    120      4.921 |\n| Total      604.90    123      4.918 |\n\nFcalc = 0.970\nFcrit = 2.680\nP-Valor = 0.591\n\nAceito H0, as médias são iguais\n"
      ]
     },
     {
@@ -563,14 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Zcalc = -5.303\nZcritmin =  -2.109\nZcritmax =  2.109\nRejeito H0\n"
+      "Zcalc = -5.303\n",
+      "Zcritmin =  -2.109\n",
+      "Zcritmax =  2.109\n",
+      "Rejeito H0\n"
      ]
     },
     {
@@ -581,7 +590,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 21
     }
    ],
    "source": [
@@ -593,14 +602,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Zcalc = 1.080\nZcrit = 2.576\nP-Valor = 0.14003\nAceito H0, as proporções são iguais\n"
+      "Zcalc = 1.080\n",
+      "Zcrit = 2.576\n",
+      "P-Valor = 0.14003\n",
+      "Aceito H0, as proporções são iguais\n"
      ]
     },
     {
@@ -611,7 +623,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 22
     }
    ],
    "source": [
@@ -623,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +653,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 23
     }
    ],
    "source": [
@@ -652,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +682,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 24
     }
    ],
    "source": [
@@ -681,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +711,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 25
     }
    ],
    "source": [
@@ -710,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +740,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 26
     }
    ],
    "source": [
@@ -740,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +770,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 27
     }
    ],
    "source": [
@@ -768,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +798,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 28
     }
    ],
    "source": [
@@ -799,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +829,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 29
     }
    ],
    "source": [
@@ -829,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +859,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 30
     }
    ],
    "source": [
@@ -858,10 +870,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "| Fonte        SQ        gl          QM    |\n| Entre     57905.95     1       57905.946 |\n| Residual   36036.91    12      3003.076 |\n| Total      93942.86    13      7226.374 |\n\n|r| = 0.785\nR² = 0.616\nRejeito H0, há correlação linear\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "S29 = Stat()\n",
+    "S29.TC(SQR = 36036.911, SQT = 93942.857, n = 14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "| Fonte        SQ      gl       QM    |\n| Entre      74.13     2       37.067 |\n| Residual   58.80     12      4.900 |\n| Total      132.93    14      9.495 |\n\nFcalc = 7.565\nFcrit = 3.885\nP-Valor = 0.993\n\nRejeito H0, as médias são diferentes\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 63
+    }
+   ],
+   "source": [
+    "A = [15,18,17,20,19]\n",
+    "B = [19,20,16,21,19]\n",
+    "C = [24,27,23,20,21]\n",
+    "\n",
+    "lista = [A,B,C]\n",
+    "\n",
+    "S30 = Stat()\n",
+    "S30.AV(mode = \"multiMedia\", multiDados = lista, multiTamanhos = False)"
+   ]
   }
  ]
 }
